[project]
name = "chef"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.5",
    "jupyter>=1.1.1",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "openai>=1.97.0",
    "python-dotenv>=1.1.1",
]
